--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,14 @@
     color: blueviolet;
     font-size: 80px;
 } */
+
+body {
+    padding-bottom: 500px;
+}
+
+/* Classes */
+.paragraph {
+    background-color: #000;
+    color: aqua;
+    padding: 5px;
+}
