--- a/css/style.css
+++ b/css/style.css
@@ -11,16 +11,33 @@ body {
     padding-bottom: 500px;
 }
 
-/* Classes */
+/* 08 Classes */
+
 .paragraph {
     background-color: #000;
     color: aqua;
     padding: 5px;
 }
 
+/* 09 ID */
+
 #exclusive-title {
     background-color: purple;
     color: beige;
     padding: 10px;
     font-size: 40px;
+}
+
+/* 10 Multíplas regras */
+
+h2 {
+    border-bottom: 2px dotted red;
+}
+
+.titulo {
+    border-bottom: 3px solid blue;
+}
+
+#algum-titulo {
+    border-bottom: 4px solid green;
 }
